--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
       "import/prefer-default-export": "off",
       "prettier/prettier": "error",
       "no-use-before-define": "off",
+      "react/prop-types": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
