--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
       "prettier/prettier": "error",
       "no-use-before-define": "off",
       "react/prop-types": "off",
+      "react/jsx-props-no-spreading": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
