--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
       "no-use-before-define": "off",
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
+      "camelcase": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
