--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
       "camelcase": "off",
+      "@typescript-eslint/explicit-module-boundary-types": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
