--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
       "react/jsx-props-no-spreading": "off",
       "camelcase": "off",
       "@typescript-eslint/explicit-module-boundary-types": "off",
+      "no-unused-expressions": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
